# OTUS-DataOps-Engineer

./: README.md
AirFlow/: docker-compose.yml  pyproject.toml
AirFlow/dags/: otus_dag.py
Ansible/: ansible.cfg  play.yml
Ansible/inventories/production/: hosts
Ansible/roles/nginx/handlers/: main.yml
Ansible/roles/nginx/tasks/: main.yml
Ansible/roles/nginx/templates/: nginx.conf  nginx_vhosts.conf
Ansible/roles/postgres/handlers/: main.yml
Ansible/roles/postgres/tasks/: main.yml
Ansible/roles/postgres/vars/: main.yml  vault_main.yml
Docker/: Dockerfile  docker-compose.yml  pyproject.toml
Docker/otus-app/: database.py  dependencies.py  main.py
Docker/otus-app/models/: employee.py
Docker/otus-app/repositories/: employees.py
Docker/otus-app/routers/: employees.py
Docker/otus-app/schemas/: employee.py
Terraform/: main.tf  meta.txt
