[tool.poetry]
name = "otus-app"
version = "0.1.0"
description = "Домашнее задание Docker"
authors = ["Sultan <romtrash98@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
SQLAlchemy = "^1.4.40"
psycopg2-binary = "^2.9.3"
pydantic = {extras = ["email", "dotenv"], version = "^1.9.2"}

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
